--- a/data.html
+++ b/data.html
@@ -9,16 +9,15 @@
 <body>
   <header>
     <nav>
-      <a href="index.html">Home</a>
       <a href="data.html">Data</a>
-      <a href="images.html">Images</a>
+      <a href="zdjecia.html">Zdjecia</a>
       <a href="form.html">Form</a>
-      <a href="author.html">Authors</a>
+      <a href="autorzy.html">Autorzy</a>
     </nav>
   </header>
 
   <main>
-    <h1>Virtual and Augmented Reality</h1>
+    <h1 id="costam">Virtual and Augmented Reality</h1>
 
     <table>
       <thead>
