--- a/glowna.html
+++ b/glowna.html
@@ -4,34 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Strona Glowna</title>
-    <style>
-    menu{
-        text-align: center;
-    }
-    h1{
-        text-align: center;
-        color: green;
-    }
-    p{
-        font-style: italic;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        text-align: justify;
-    }
-    a:hover{
-        background-color: blue;
-    }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <menu>
-        <a href="dane.html">Dane</a>
+        <a href="data.html">Dane</a>
         <a href="zdjecia.html">Zdjecia</a>
-        <a href="formularz.html">Formularz</a>
+        <a href="form.html">Formularz</a>
         <a href="autorzy.html">Autorzy</a>
     </menu>
-    <h1>Strona Glowna</h1>
-    <p>Prekursorem rzeczywistości wirtualnej jest Myron W. Krueger (ur. 1942) – artysta, badacz i informatyk. Opracował i stworzył projekty wideoinstalacji, 
+    <h1 id="tytulglowny">Strona Glowna</h1>
+
+    <p id="paragrafglowny">Prekursorem rzeczywistości wirtualnej jest Myron W. Krueger (ur. 1942) – artysta, badacz i informatyk. Opracował i stworzył projekty wideoinstalacji, 
         które określał mianem środowisk responsywnych. Pierwszym projektem Kruegera, utworzonym we współpracy z Dan Sandin, Jerry Erdman i Richard Venezky, 
         był powstały w 1969 roku na Uniwersytecie Wisconsin-Madison, Glowflow. Konstrukcja składała się z zaciemnionego pokoju, 
         na którego ścianach umieszczono cztery przezroczyste rury. Poprzez wpompowywanie w nie fluorescencyjnych cząsteczek zmieniano ich kolor, 
@@ -43,10 +27,23 @@
         na wspólnej przestrzeni wizualnej. Projekt był w kolejnych latach rozbudowywany i wzbogacamy o nowe zdobycze techniki. Zastosowano nowe oprogramowanie, 
         lepsze komputery oraz akcesoria takie jak hełm i wirtualne rękawice. Roli Kruegera nie sposób przecenić. Jego projekty i wizje stały się prototypami systemów Rzeczywistości Wirtualnej, 
         mających zastosowanie w edukacji, psychologii i psychoterapii. Jednym z takich systemów jest powstała 20 lat później (w 1992 roku) instalacja o nazwie CAVE.</p>
+
+        <div class="container">
+            <div class="column">
+                <h3>VR</h3>
+                <p>Rzeczywistość wirtualna (ang. virtual reality) – obraz sztucznej rzeczywistości stworzony przy wykorzystaniu technologii informatycznej. Polega na multimedialnym kreowaniu komputerowej wizji przedmiotów, przestrzeni i zdarzeń. Może on reprezentować zarówno elementy świata realnego (symulacje komputerowe), jak i zupełnie fikcyjnego (gry komputerowe science-fiction).</p>
+            </div>
+            <div class="column">
+                <h3>AR</h3>
+                <p>Rzeczywistość rozszerzona (ang. augmented reality), rzeczywistość poszerzona[1] – system łączący świat rzeczywisty z generowanym komputerowo. Zazwyczaj wykorzystuje się obraz z kamery, na który nałożona jest, generowana w czasie rzeczywistym, grafika 3D[2]. Istnieją także zastosowania wspomagające jedynie dźwięk (jak aplikacja RjDj na iPhone).
+
+                    Na przykład użytkownik AR może za pomocą półprzezroczystych okularów obserwować życie toczące się na ulicach miasta jak również elementy wytworzone przez komputer nałożone na rzeczywisty świat.</p>
+            </div>
+        </div>
 <div id="linki">
-    <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_wirtualna">Wikipedia VR</a>
-    <a href="https://www.neonet.pl/blog/technologia-vr-co-to-jest-i-jak-dziala-odpowiadamy.html?srsltid=AfmBOooL9YXYAKYA0sZFmE1AOyKKxAV3bKagmN6hkpUXn-8Tr1PSe0KG">Artykul NeoNet</a>
-    <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_rozszerzona">Wikipedia AR</a>
+    <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_wirtualna" id="a">Wikipedia VR</a>
+    <a href="https://www.neonet.pl/blog/technologia-vr-co-to-jest-i-jak-dziala-odpowiadamy.html?srsltid=AfmBOooL9YXYAKYA0sZFmE1AOyKKxAV3bKagmN6hkpUXn-8Tr1PSe0KG" id="b">Artykul NeoNet</a>
+    <a href="https://pl.wikipedia.org/wiki/Rzeczywisto%C5%9B%C4%87_rozszerzona" id="c">Wikipedia AR</a>
 </div>
 </body>
 </html>
